--- a/Index/style.css
+++ b/Index/style.css
@@ -23,6 +23,9 @@ body {
     border-radius: 8px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
   }
+  header h1{
+    color: #f4f7fb;
+  }
 
   h1 {
     color: #2c3e50;
