--- a/Positioning/style.css
+++ b/Positioning/style.css
@@ -9,7 +9,7 @@
     color: #1f2d3d;
   }
   header {
-    background: linear-gradient(90deg, #1f4037, #99f2c8);
+    background: linear-gradient(#2c3e50);
     color: #ffffff;
     padding: 20px;
     text-align: center;
@@ -94,4 +94,11 @@
 
   .spacer {
     height: 1000px;
+  }
+  footer {
+    background-color: #2c3e50;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    margin-top: 50px;
   }
