--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
   }
 
   .topic-list li:hover {
-    background-color: #3498db;
+    background-color: #9fa0a0;
     color: white;
     transform: scale(1.05);
   }
@@ -66,5 +66,5 @@ body {
     background-color: #2c3e50;
     color: white;
     font-size: 1rem;
-    margin-top: 40px;
+    margin-top: 190px;
   }
